--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Minimalist Launcher</string>
+    <string name="preference_file_key">com.caleballen.minimalistlauncher.settings</string>
 </resources>
